# HistoEncoder

./: .gitignore  LICENCE  README.md  pyproject.toml
docs/: histoencoder.html  index.html  search.js
docs/histoencoder/: _cli.html  functional.html
docs/histoencoder/_cli/: _cluster.html  _extract.html  _run.html  _utils.html
histoencoder/: __init__.py  _model.py  _wrapper.py
histoencoder/_cli/: __init__.py  _cluster.py  _extract.py  _run.py  _utils.py
histoencoder/_functional/: __init__.py  _features.py  _freeze.py  _model.py  _writer.py
histoencoder/cli/: _annotate.py  _cluster.py  _run.py
histoencoder/functional/: __init__.py  _check.py  _cluster.py  _features.py  _freeze.py  _model.py  _params.py  _writer.py
scripts/: update_docs.sh
tests/: __init__.py  _cli_extract_test.py  _cluster_test.py  _feature_test.py  _freeze_test.py  _model_test.py  _params_test.py  _utils.py
tests/data/slide/: metadata.parquet  properties.json
