[tool.poetry]
name = "histoencoder"
version = "0.1.0"
description = ""
authors = ["jopo666 <jopo@birdlover.com>"]
readme = "README.md"

[tool.poetry.scripts]
HistoEncoder = 'histoencoder.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
timm = "^0.5"
torch = "^2"
torchvision = "^0.15"
histoprep = "^2"
rich-click = "^1.6"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-console-scripts = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
