[tool.poetry]
name = "histoencoder"
version = "0.1.1"
description = "Foundation models for digital pathology."
authors = ["jopo666 <jopo@birdlover.com>"]
readme = "README.md"

[tool.poetry.scripts]
HistoEncoder = 'histoencoder._cli:run'

[tool.poetry.dependencies]
python = "^3.9"
timm = "^0.5"
torch = "^2"
torchvision = "^0.15"
histoprep = "^2"
rich-click = "^1.6"
scikit-learn = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-console-scripts = "^1.3.1"
pdoc = "^13.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
